2009-07-04  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* term/aquaterm.trm (AQUA_options): Fix typo.

2009-07-03  Harald Harders  <h.harders@tu-bs.de>
	* term/cairo.trm: Introduce the struct cairo_params_t that takes all pdfcairo
	and pngcairo terminal options, e.g., color, rounded, fontsize, 	etc., as it 
	is already done in term/post.trm. This is useful when different terminals 
	share the same portion of code.

2009-07-02  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.c: The "size xx,yy" option should have a comma between
	xx and yy for consistency with other terminals.

2009-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars): Candlestick boxes that were entirely out
	of range on y were nevertheless appearing as a horizontal line along the
	plot border.  Skip them entirely.  Same problem for whiskerbars.
	Bugs #2807571 #2812572

2009-06-21  Thomas Sefzick <thse@users.sourceforge.net>

	* term/gd.trm: The background color requested in "set term png..."
	was not being used in truecolor png output.
	Bugfix

2009-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term): Initialize bounding box.  Exercise a few
	more terminal properties if available:  transparency, enhanced text. 

	* configure.in: Remove the EXPERIMENTAL warning from the configuration
	options for command line macros and for the tikz/lua terminal.

2009-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
	set term wxt {dashed} {dashlength <dl>}

2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
	only the color from linetype N, not any of the other properties.
	Bugfix  (e.g.  plot sin(x) with lines lt 0 lc 3)

2009-06-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc